TASK: Make sure that the DeviceStage media always covers the whole device area

--- a/Packages/Sites/Neos.NeosIo/Resources/Private/Scss/Utilities/_Neos.scss
+++ b/Packages/Sites/Neos.NeosIo/Resources/Private/Scss/Utilities/_Neos.scss
@@ -17,4 +17,11 @@
 .neos-neosio-youtube > .flexibleEmbed {
 	max-width: 50em;
 	margin: 0 auto;
+
+	//
+	// Device stage media nodes should always cover the whole screen.
+	//
+	.deviceStage__device & {
+		max-width: none;
+	}
 }
