--- a/Packages/Sites/Neos.NeosIo/Resources/Public/Styles/Main.css
+++ b/Packages/Sites/Neos.NeosIo/Resources/Public/Styles/Main.css
@@ -904,6 +904,8 @@ input::-moz-focus-inner {
 .neos-neosio-youtube > .flexibleEmbed {
   max-width: 50em;
   margin: 0 auto; }
+  .deviceStage__device .neos-neosio-youtube > .flexibleEmbed {
+    max-width: none; }
 
 /**
  * Base Alert:
@@ -1704,7 +1706,7 @@ sub {
 .flag__image {
   display: table-cell;
   vertical-align: middle;
-  padding-right: 30px; }
+  padding-right: 26px; }
   .flag__image > img {
     display: block;
     max-width: none; }
@@ -1726,7 +1728,7 @@ sub {
  */
 .flag__image--rev {
   padding-right: 0;
-  padding-left: 30px; }
+  padding-left: 26px; }
 
 /**
  * Flexible Embed:
@@ -1854,8 +1856,8 @@ sub {
  */
 .g,
 .grid {
-  margin-left: -15px;
-  margin-right: -15px; }
+  margin-left: -26px/2;
+  margin-right: -26px/2; }
   .g:before, .g:after,
   .grid:before,
   .grid:after {
@@ -1868,8 +1870,8 @@ sub {
 .gi,
 .grid__item {
   float: left;
-  padding-left: 15px;
-  padding-right: 15px; }
+  padding-left: 26px/2;
+  padding-right: 26px/2; }
 
 @media screen and (min-width: 650px) and (max-width: 1200px) {
   .u-w1\/1.u-wm6\/12.u-wl3\/12.neos-contentcollection:nth-child(odd) {
